--- a/stencil-digital-clock/package.json
+++ b/stencil-digital-clock/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.1",
   "description": "Stencil App Starter",
   "scripts": {
-    "build": "stencil build",
-    "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll"
+    "build": "npx stencil build",
+    "start": "npx stencil build --dev --watch --serve",
+    "test": "npx stencil test --spec --e2e",
+    "test.watch": "npx stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@stencil/core": "~0.16.2",
-    "@stencil/router": "~0.3.1"
+    "@stencil/core": "^0.16.4",
+    "@stencil/router": "^0.3.3"
   },
   "license": "MIT"
 }
